Fix for title overflow in crypto page

--- a/css/main.scss
+++ b/css/main.scss
@@ -207,6 +207,8 @@ body{
         display: flex;
         align-items: baseline;
         gap: 0.5em;
+        overflow: auto;
+        padding-bottom: .5em;
       }
       &.logo{
         align-items: center;
